[gd_scene load_steps=12 format=3 uid="uid://cjt7j7iawm8n5"]

[ext_resource type="Script" uid="uid://cpvknkf3ckv14" path="res://content/player/player.gd" id="1_2rga7"]
[ext_resource type="Material" uid="uid://bcldas4tqx6ef" path="res://prototype/materials/prototype_red.material" id="2_y66qv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y66qv"]
radius = 0.25
height = 1.6

[sub_resource type="Animation" id="Animation_xq2a1"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k1y4q"]
_data = {
&"RESET": SubResource("Animation_xq2a1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rga7"]
bg_color = Color(0.337255, 0.337255, 0.337255, 0.517647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y66qv"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq5wi"]
bg_color = Color(0.207273, 0.207273, 0.207273, 0.333333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4jjh"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oq5wi"]
material = ExtResource("2_y66qv")
radius = 0.25
height = 1.6

[sub_resource type="BoxMesh" id="BoxMesh_y66qv"]
size = Vector3(0.35, 0.125, 0.15)

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_2rga7")

[node name="ControllerCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_y66qv")
debug_fill = false

[node name="CameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 1, 1.5, 0)

[node name="CameraArm" type="SpringArm3D" parent="CameraMount"]
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="CameraMount/CameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k1y4q")
}

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.9
anchor_right = 0.65
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_2rga7")
theme_override_styles/fill = SubResource("StyleBoxFlat_y66qv")
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/background = SubResource("StyleBoxFlat_oq5wi")
theme_override_styles/fill = SubResource("StyleBoxFlat_i4jjh")
value = 100.0
show_percentage = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
mesh = SubResource("CapsuleMesh_oq5wi")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.32036, -0.198859)
mesh = SubResource("BoxMesh_y66qv")
